Added more files

--- a/starbucks_happiness.ipynb
+++ b/starbucks_happiness.ipynb
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "4  17688-182164  United Arab Emirates"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
        "4  United Arab Emirates  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "4                      18.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
        "4      Netherlands       5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "4  Netherlands          5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2272,7 @@
        "[25598 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2409,7 @@
        "344    BE  Brunei Darussalam        0.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2443,7 @@
        " 'Viet Nam']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3372,7 +3372,7 @@
        "[25598 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3390,25 +3390,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter User Name    postgres\n"
+     ]
+    }
+   ],
    "source": [
     "username=input(\"Enter User Name    \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Password :········\n"
+     ]
+    }
+   ],
    "source": [
     "password=getpass(\"Enter Password :\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3418,16 +3434,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['starbucks', 'happiness']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " engine.table_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3436,7 +3463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3452,9 +3479,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>ownership_type</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>47370257954</td>\n",
+       "      <td>Starbucks</td>\n",
+       "      <td>Meritxell, 96</td>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>Av. Meritxell, 96</td>\n",
+       "      <td>Andorra la Vella</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>47089256771</td>\n",
+       "      <td>Starbucks</td>\n",
+       "      <td>Dana Mall</td>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>Sheikh Khalifa Bin Zayed St.</td>\n",
+       "      <td>Ajman</td>\n",
+       "      <td>AJ</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22126218024</td>\n",
+       "      <td>Starbucks</td>\n",
+       "      <td>Twofour 54</td>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>Al Salam Street</td>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17127178586</td>\n",
+       "      <td>Starbucks</td>\n",
+       "      <td>Al Ain Tower</td>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>Khaldiya Area, Abu Dhabi Island</td>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17688182164</td>\n",
+       "      <td>Starbucks</td>\n",
+       "      <td>Dalma Mall, Ground Floor</td>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>Dalma Mall, Mussafah</td>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id      brand                store_name ownership_type  \\\n",
+       "0  47370257954  Starbucks             Meritxell, 96       Licensed   \n",
+       "1  47089256771  Starbucks                 Dana Mall       Licensed   \n",
+       "2  22126218024  Starbucks                Twofour 54       Licensed   \n",
+       "3  17127178586  Starbucks              Al Ain Tower       Licensed   \n",
+       "4  17688182164  Starbucks  Dalma Mall, Ground Floor       Licensed   \n",
+       "\n",
+       "                           address              city state  \\\n",
+       "0                Av. Meritxell, 96  Andorra la Vella     7   \n",
+       "1     Sheikh Khalifa Bin Zayed St.             Ajman    AJ   \n",
+       "2                  Al Salam Street         Abu Dhabi    AZ   \n",
+       "3  Khaldiya Area, Abu Dhabi Island         Abu Dhabi    AZ   \n",
+       "4             Dalma Mall, Mussafah         Abu Dhabi    AZ   \n",
+       "\n",
+       "                country  \n",
+       "0               Andorra  \n",
+       "1  United Arab Emirates  \n",
+       "2  United Arab Emirates  \n",
+       "3  United Arab Emirates  \n",
+       "4  United Arab Emirates  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_sql_query('select * from starbucks', con=engine).head()"
    ]
@@ -3468,9 +3614,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>country</th>\n",
+       "      <th>happiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id      country  happiness\n",
+       "0   1      Finland          1\n",
+       "1   2      Denmark          2\n",
+       "2   3       Norway          3\n",
+       "3   4      Iceland          4\n",
+       "4   5  Netherlands          5"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_sql_query('select * from happiness', con=engine).head()"
    ]
